--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "dat-skelli",
+  "name": "dat-hapi-skelli",
   "version": "1.0.0",
-  "description": "Skeleton Project with Babel, Gulp, Mocha, and Chai",
+  "description": "A Hapi Skeleton Project with Babel, Gulp, Mocha and Chai",
   "main": "index.js",
   "keywords": [],
   "devDependencies": {
