--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "dat-hapi-skelli",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A Hapi Skeleton Project with Babel, Gulp, Mocha and Chai",
-  "main": "index.js",
+  "main": "./dist/server.js",
   "keywords": [],
   "devDependencies": {
     "babel-cli": "^6.24.1",
