--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dat-hapi-skelli",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "description": "A Hapi Skeleton Project with Babel, Gulp, Mocha and Chai",
   "main": "./dist/server.js",
   "keywords": [],
@@ -21,6 +21,8 @@
   "author": "Philip Smith",
   "license": "MIT",
   "dependencies": {
+    "D": "^1.0.0",
+    "eslint": "^4.4.1",
     "hapi": "^16.5.2"
   }
 }
